Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release
- Module: added heap integrity check + alert command for usage in e.g. custom event scripts,
    enables adding checks on specific system events and/or with higher frequency.
    Example: perform heap integrity check when the server V2 gets stopped:
      vfs echo "module check alert" /store/events/server.v2.stopped/90-checkheap
  Command extension:
    module check alert                    -- Check for and send one-off alert on heap corruption
- VFS: added echo command to write a line to a file
  New commands:
    vfs echo <line> <file>                -- Write <line> to <file>, creating/replacing the file
- smart EQ:
  New commands:
    xsq ed4scan                           -- Output ED4scan-like BMS diagnostic data
                                             (battery health, SOC kernel data, cell resistance,
                                             contactor cycles, temperatures, voltages)
- Module: add heap tracing tools -- NOTE: heap tracing will for now not be enabled by default on user builds.
    This is meant to be used by developers to track down heap corruptions. If you encounter many
    random crashes, ask your maintainer to provide a debug build to you with heap tracing enabled,
    and let her/him guide you through the usage, or grant him/her remote access to your module.
    See: https://docs.espressif.com/projects/esp-idf/en/v3.3/api-reference/system/heap_debug.html
  New commands:
    module trace start [num_records]    -- init & start heap tracing, num_records defaults to 500
    module trace stop                   -- stop heap tracing & cleanup memory
    module trace pause                  -- pause heap tracing for inspection
    module trace resume                 -- resume heap tracing
    module trace status                 -- show current status
    module trace dump                   -- dump allocations & frees recorded