@@ -1,6 +1,10 @@
 Open Vehicle Monitor System v3 - Change log
 
 ????-??-?? ???  ???????  OTA release
+- Network manager: prevent Task Watchdog crash in PrioritiseAndIndicate()
+    The TCPIP callback semaphore (m_tcpip_callback_done) now uses a 10 second timeout
+    instead of waiting indefinitely. Prevents deadlock when the TCPIP task fails to
+    execute the callback, e.g. during WiFi state transitions.
 - Module: added heap integrity check + alert command for usage in e.g. custom event scripts,
     enables adding checks on specific system events and/or with higher frequency.
     Example: perform heap integrity check when the server V2 gets stopped:
